--- a/index.html
+++ b/index.html
@@ -28,12 +28,24 @@
   </header>
   <main>
     <section class="section-about">
-      <div class="u-center-text u-margin-8">
+      <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">Exciting tours for adventurous people</h2>
       </div>
 
       <div class="row">
-        <div class="col-1-of-2">Col 1 of 2</div>
+        <div class="col-1-of-2">
+          <h3 class="heading-tertiary u-margin-bottom-small">You're going to fall in love with nature</h3>
+          <p class="paragraph">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus nihil enim expedita necessitatibus accusantium exercitationem rerum odit, eaque eum voluptates non beatae, nisi optio qui, voluptate asperiores libero quos iste.
+          </p>
+
+          <h3 class="heading-tertiary u-margin-bottom-small">Live adventures like you never have before</h3>
+          <p class="paragraph">
+            Ducimus nihil enim expedita necessitatibus accusantium exercitationem rerum odit, eaque eum voluptates non beatae.
+          </p>
+
+          <a href="#" class="btn-text">Learn more &rarr;</a>
+        </div>
         <div class="col-1-of-2">Col 1 of 2</div>
       </div>
     </section>
