Add pure css popup

--- a/index.html
+++ b/index.html
@@ -352,5 +352,33 @@
       </div>
     </div>
   </footer>
+  <div class="popup">
+    <div class="popup__content">
+      <div class="popup__left">
+        <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+        <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+      </div>
+      <div class="popup__right">
+        <h2 class="heading-secondary u-margin-bottom-small">
+          Start booking now
+        </h2>
+        <h3 class="heading-tertiary u-margin-bottom-small">
+          Important &ndash; Please read the terms before booking
+        </h3>
+        <p class="popup__text">
+          Fusce vitae ultricies urna. Vestibulum quis convallis quam, blandit 
+          facilisis tellus. Suspendisse dictum nunc condimentum ex auctor 
+          viverra. Proin eget tincidunt diam, eget pharetra arcu. Etiam 
+          vestibulum sit amet justo id efficitur. Ut lacinia magna nibh, quis 
+          ornare ex facilisis in. Aliquam lorem lectus, egestas a euismod id, 
+          semper a nisi. Quisque porttitor eros sagittis, condimentum justo a, 
+          venenatis sem. Curabitur lobortis, dolor ac sodales hendrerit, arcu 
+          massa tincidunt massa, et finibus justo neque a dolor. Suspendisse et 
+          egestas tortor, id rhoncus arcu.
+        </p>
+        <a class="btn btn--green" href="#">Book now</a>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
