--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <span class="heading-primary--sub">is where life happens</span>
       </h1>
       
-      <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
+      <a href="#section-tours" class="btn btn--white btn--animated">Discover our tours</a>
     </div>
   </header>
   <main>
@@ -114,7 +114,7 @@
         </div>
       </div>
     </section>
-    <section class="section-tours">
+    <section id="section-tours" class="section-tours">
       <div class="u-center-text u-margin-bottom-big">
         <h2 class="heading-secondary">Most popular tours</h2>
       </div>
@@ -150,7 +150,7 @@
                     $297
                   </p>
                 </div>
-                <a href="#" class="btn btn--white">Book now!</a>
+                <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
             </div>
           </div>
@@ -186,7 +186,7 @@
                     $497
                   </p>
                 </div>
-                <a href="#" class="btn btn--white">Book now!</a>
+                <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
             </div>
           </div>
@@ -222,7 +222,7 @@
                     $897
                   </p>
                 </div>
-                <a href="#" class="btn btn--white">Book now!</a>
+                <a href="#popup" class="btn btn--white">Book now!</a>
               </div>
             </div>
           </div>
@@ -352,13 +352,14 @@
       </div>
     </div>
   </footer>
-  <div class="popup">
+  <div id="popup" class="popup">
     <div class="popup__content">
       <div class="popup__left">
         <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
         <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
       </div>
       <div class="popup__right">
+        <a href="#section-tours" class="popup__close">&times;</a>
         <h2 class="heading-secondary u-margin-bottom-small">
           Start booking now
         </h2>
