Add media queries for cards, form and popup

--- a/index.html
+++ b/index.html
@@ -373,9 +373,7 @@
           vestibulum sit amet justo id efficitur. Ut lacinia magna nibh, quis 
           ornare ex facilisis in. Aliquam lorem lectus, egestas a euismod id, 
           semper a nisi. Quisque porttitor eros sagittis, condimentum justo a, 
-          venenatis sem. Curabitur lobortis, dolor ac sodales hendrerit, arcu 
-          massa tincidunt massa, et finibus justo neque a dolor. Suspendisse et 
-          egestas tortor, id rhoncus arcu.
+          venenatis sem.
         </p>
         <a class="btn btn--green" href="#">Book now</a>
       </div>
